[package]
name = "bump-into"
version = "0.7.1"
edition = "2018"
authors = ["Autumn <autumnontape@tutanota.com>"]
description = "a no_std bump allocator sourcing space from a user-provided slice"
license = "MIT"
repository = "https://github.com/autumnontape/bump-into"
categories = ["no-std", "rust-patterns", "memory-management"]
readme = "README.md"
documentation = "https://docs.rs/bump-into"

[dependencies]
