[package]
name = "bump-into"
version = "0.8.0"
edition = "2018"
rust-version = "1.44"
authors = ["Autumn <autumn@cyfox.net>"]
description = "a no_std bump allocator sourcing space from a user-provided slice"
license = "MIT"
repository = "https://github.com/autumnontape/bump-into"
categories = ["no-std", "rust-patterns", "memory-management"]
readme = "README.md"
documentation = "https://docs.rs/bump-into"

[dependencies]
